--- a/about/index.html
+++ b/about/index.html
@@ -5,24 +5,24 @@
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"><!--<![endif]-->
 <head>
 <meta charset="utf-8">
-<title>Mahdi Karimian website</title>
-<meta name="description" content="Mahdi Karimian website.">
-<meta name="keywords" content="SLAM, computer vision, autonomous, sensor, zynq, FPGA, DSP, rotation estimation">
+<title>About Me &#8211; Mahdi Karimian website</title>
+<meta name="description" content="">
+<meta name="keywords" content="about">
 
 
 <!-- Open Graph -->
 <meta property="og:locale" content="en_US">
 <meta property="og:type" content="article">
-<meta property="og:title" content="Mahdi Karimian website">
-<meta property="og:description" content="Mahdi Karimian website.">
-<meta property="og:url" content="http://localhost:4000/">
+<meta property="og:title" content="About Me">
+<meta property="og:description" content="personal website.">
+<meta property="og:url" content="http://localhost:4000/about/index.html">
 <meta property="og:site_name" content="Mahdi Karimian website">
 
 
 
 
 
-<link rel="canonical" href="http://localhost:4000/">
+<link rel="canonical" href="http://localhost:4000/about/">
 <link href="http://localhost:4000/feed.xml" type="application/atom+xml" rel="alternate" title="Mahdi Karimian website Feed">
 
 
@@ -62,7 +62,7 @@
 
 </head>
 
-<body class="home" itemscope itemtype="http://schema.org/WebPage">
+<body class="page" itemscope itemtype="http://schema.org/WebPage">
 
 <!--[if lt IE 9]><div class="browser-upgrade alert alert-info">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</div><![endif]-->
 
@@ -92,12 +92,13 @@
     </nav>
 
 <div class="image-wrap">
-  <img src="http://localhost:4000/images/texture-feature-02.jpg" alt=" feature image" itemprop="primaryImageOfPage">
+  <img src="http://localhost:4000/images/texture-feature-02.jpg" alt="About Me feature image" itemprop="primaryImageOfPage">
   <span class="image-credit">Photo Credit: <a href="http://texturelovers.com">Texture Lovers</a></span>
 </div><!-- /.image-wrap -->
 
-<div class="article-author-side">
-  <img src="http://localhost:4000/images/myimage.JPG" class="bio-photo" alt="Mahdi Karimian bio photo"></a>
+<div id="main" role="main"  itemprop="mainContentOfPage">
+  <div class="article-author-side">
+    <img src="http://localhost:4000/images/myimage.JPG" class="bio-photo" alt="Mahdi Karimian bio photo"></a>
 <h3>Mahdi Karimian</h3>
 <p>Mahdi karimian is an electrical engineer. He works on computer vision and its implemetation.</p>
 
@@ -110,16 +111,15 @@
 <a href="http://dspl.ce.sharif.edu/" class="author-social" target="_blank"><i></i> OurLab</a>
 
 
-</div>
+  </div>
+  <article itemscope itemtype="http://schema.org/CreativeWork">
+    <h1 itemprop="name">About Me</h1>
+    <div class="article-wrap" itemprop="text">
+      <p>My name is <strong>Mahdi Karimian</strong>, I am an intern in Digital signal processing lab.</p>
 
-<div id="index" itemprop="mainContentOfPage" itemscope itemtype="http://schema.org/Blog">
-  <h3><a href="http://localhost:4000/articles/">Articles</a></h3>
-      
-  <article itemscope itemtype="http://schema.org/BlogPosting" itemprop="blogPost">
-    <h2 itemprop="headline"><a href="http://localhost:4000/articles/MYCV" rel="bookmark" title="My Resume">My Resume</a></h2>
-    <p itemprop="text">      Contents    PUBLICATION2016	Danial Kamran, MahdiKarimian,  Ali Nazemi,  Mohammad Taghi Manzuri, ” Onlinevisual ...</p>
+
+    </div><!-- /.article-wrap -->
   </article>
-  
 </div><!-- /#index -->
 
 <div class="footer-wrap">
@@ -149,7 +149,7 @@
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
 </script>
+          
 
-  
 </body>
 </html>
