--- a/404.html
+++ b/404.html
@@ -100,7 +100,7 @@
   <div class="article-author-side">
     <img src="https://mahdikarimian.github.io/images/myimage.JPG" class="bio-photo" alt="Mahdi Karimian bio photo"></a>
 <h3>Mahdi Karimian</h3>
-<p>Mahdi karimian is an electrical engineer. He works on computer vision and its implemetation.</p>
+<p>Mahdi karimian is an electrical engineer. He works in the field of computer vision.</p>
 
 
 
@@ -141,22 +141,6 @@
 <script>window.jQuery || document.write('<script src="https://mahdikarimian.github.io/assets/js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
 <script src="https://mahdikarimian.github.io/assets/js/scripts.min.js"></script>
 <script src="https://mahdikarimian.github.io/assets/js/main.js"></script>
-
-<!-- Asynchronous Google Analytics snippet -->
-<script>
-  var _gaq = _gaq || [];
-  var pluginUrl = 
- '//www.google-analytics.com/plugins/ga/inpage_linkid.js';
-  _gaq.push(['_require', 'inpage_linkid', pluginUrl]);
-  _gaq.push(['_setAccount', 'UA-39365944-4']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-</script>
           
 
 </body>
