--- a/about/index.html
+++ b/about/index.html
@@ -115,7 +115,7 @@
   <article itemscope itemtype="http://schema.org/CreativeWork">
     <h1 itemprop="name">About Me</h1>
     <div class="article-wrap" itemprop="text">
-      <p>My name is <strong>Mahdi Karimian</strong>, I am an researcher in Digital signal processing lab.</p>
+      <p>My name is <strong>Mahdi Karimian</strong>, I am a researcher in Digital signal processing lab.</p>
 
 
     </div><!-- /.article-wrap -->
